[package]
name = "krabby_details"
version = "0.1.1"
edition = "2024"
description = "This is a simple library to follow the RFC 9457 specification"
license = "MIT"
authors = ["Phosphorus-M"]
repository = "https://github.com/DwebbleRS/krabby_details"

[dependencies]
axum-core = "0.5.2"
bytes = "1.10.1"
http = "1.3.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
